new hugo.yaml action

--- a/content/denik/2024-03-15.md
+++ b/content/denik/2024-03-15.md
@@ -43,3 +43,5 @@ No a teď už je to hotový úplně, ten konec byl samá hadice a kořeny od
 vistárky. Tak se musíme poradit, jestli je tam necháme nebo usekneme.
 
 ![Image](/images/denik/2024-03-15-img-06.jpeg)
+
+#blog
